[gd_scene load_steps=6 format=2]

[ext_resource path="res://Plane/HUDComponents/PlaneHUD.gd" type="Script" id=1]
[ext_resource path="res://Plane/FiringRing.png" type="Texture" id=2]
[ext_resource path="res://Radar/Radar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Plane/HUDComponents/LevelUp.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/theme.tres" type="Theme" id=5]

[node name="PlaneHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -96.0
margin_right = 100.0
margin_bottom = -10.0

[node name="FuelBar" type="ProgressBar" parent="Control/VBoxContainer"]
margin_right = 200.0
margin_bottom = 41.0
max_value = 120.0
value = 120.0

[node name="AmmoBar" type="ProgressBar" parent="Control/VBoxContainer"]
margin_top = 45.0
margin_right = 200.0
margin_bottom = 86.0
max_value = 20.0
step = 1.0
value = 20.0

[node name="KillBanners" type="VBoxContainer" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -106.0
margin_top = 53.0

[node name="HealthBar" type="ProgressBar" parent="Control"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 25.0
max_value = 60.0
step = 1.0
value = 60.0

[node name="Altitude" type="Label" parent="Control"]
margin_left = 5.0
margin_top = 51.0
margin_right = 102.0
margin_bottom = 72.0
text = "Altitude: "

[node name="Airspeed" type="Label" parent="Control"]
margin_left = 5.0
margin_top = 77.0
margin_right = 86.0
margin_bottom = 98.0
text = "airspeed:"

[node name="FiringRing" type="TextureRect" parent="Control"]
modulate = Color( 1, 0, 0, 0.741176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -20.0
margin_right = 25.0
margin_bottom = 30.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="Radar" parent="Control" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 103.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="LevelUp" parent="Control" instance=ExtResource( 4 )]
visible = false

[connection signal="launch" from="Control/LevelUp" to="." method="_on_LevelUp_launch"]
[connection signal="upgrade" from="Control/LevelUp" to="." method="_on_LevelUp_upgrade"]
